--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,17 @@
 		"libft.h": "c",
 		"stddef.h": "c",
 		"stdlib.h": "c",
-		"stdio.h": "c"
+		"stdio.h": "c",
+		"__hash_table": "c",
+		"__split_buffer": "c",
+		"array": "c",
+		"bitset": "c",
+		"deque": "c",
+		"initializer_list": "c",
+		"queue": "c",
+		"string": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"vector": "c"
 	}
 }
