--- a/libft/Makefile
+++ b/libft/Makefile
@@ -4,6 +4,10 @@ ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_putchar_fd.c ft_
 ft_split.c ft_strchr.c ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c \
 ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c
 
+BONUS	= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
+		  ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+OBJBONUS = $(BONUS:%.c=%.o)
+
 OBJ = $(SRC:.c=.o)
 INC = .
 CC = cc
@@ -16,6 +20,11 @@ RM = rm -rf
 $(NAME): $(OBJ)
 	ar rc $(NAME) $(OBJ)
 	ranlib $(NAME)
+
+bonus: $(NAME) $(OBJB)
+	ar rc $(NAME) $(OBJB)
+	ranlib $(NAME)
+
 
 all: $(NAME)
 
