--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,8 +1,8 @@
 NAME = so_long
-SRC = main.c map_setup.c map_setup_2.c game_setup.c
+SRC = main.c src/map_setup.c src/map_setup_2.c src/game_setup.c
 OBJ = $(SRC:.c=.o)
 INC_LIBFT_GNL = -Ilibft/inc_libft/ -Ilibft/inc_gnl/
-INC = -I . -I/usr/include -Imlx_linux $(INC_LIBFT_GNL)
+INC = -Iinc/ -I/usr/include -Imlx_linux $(INC_LIBFT_GNL)
 CC = cc
 CFLAGS = -Wall -Wextra # -Werror
 RM = rm -rf
