--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,5 +1,5 @@
 NAME = so_long
-SRC = main.c src/map_setup.c src/map_setup_2.c src/game_setup.c
+SRC = main.c src/map_setup.c src/map_setup_2.c src/map_setup_3.c src/game_setup.c src/error_codes.c
 OBJ = $(SRC:.c=.o)
 INC_LIBFT_GNL = -Ilibft/inc_libft/ -Ilibft/inc_gnl/
 INC = -Iinc/ -I/usr/include -Imlx_linux $(INC_LIBFT_GNL)
