Change printf to custom

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,10 +1,10 @@
 NAME = so_long
-SRC = main.c src/map_setup.c src/map_setup_2.c src/map_setup_3.c src/map_setup_4.c src/game_setup.c src/game_setup_2.c src/error_codes.c src/graphics_utils.c src/key_events.c src/movement.c src/drawing.c src/drawing_2.c src/animation.c src/animation_2.c src/placing_enemies.c
+SRC = main.c src/map_setup.c src/map_setup_2.c src/map_setup_3.c src/map_setup_4.c src/game_setup.c src/game_setup_2.c src/error_codes.c src/graphics_utils.c src/key_events.c src/movement.c src/drawing.c src/drawing_2.c src/animation.c src/animation_2.c src/placing_enemies.c src/placing_enemies_2.c
 OBJ = $(SRC:.c=.o)
 INC_LIBFT_GNL = -Ilibft/inc_libft/ -Ilibft/inc_gnl/
 INC = -Iinc/ -I/usr/include -Imlx_linux $(INC_LIBFT_GNL)
 CC = cc
-CFLAGS = -Wall -Wextra # -Werror
+CFLAGS = -Wall -Wextra -Werror
 RM = rm -rf
 LIBFT_INCLUDE = -L./libft -lft
 LIBS = -Lmlx_linux -lmlx_Linux -L/usr/lib -Imlx_linux -lXext -lX11 -lm -lz $(LIBFT_INCLUDE)
@@ -17,10 +17,10 @@ $(NAME): $(OBJ)
 	cd libft && make
 	$(CC) $(OBJ) $(LIBS) -o $(NAME)
 
-configure:
+first_run:
 	git clone git@github.com:42Paris/minilibx-linux.git $(MLX_NAME)
 	cd $(MLX_NAME) && ./configure
-	clean_rebuild
+	make clean_rebuild
 
 all: $(NAME)
 
@@ -36,4 +36,4 @@ re: fclean all
 
 clean_rebuild: all clean
 
-.PHONY: all clean fclean .c.o
+.PHONY: all clean fclean .c.o clean_rebuild
