Dockerfile to run on mac | good display targetting

--- a/docker/so_long/Makefile
+++ b/docker/so_long/Makefile
@@ -1,12 +1,21 @@
 # DISCLAIMER: ONLY WORKS ON OSX
+include .env
+export
 
-IMAGE_NAME = so_long_gui
-CREATE_IMAGE = docker build -t $(IMAGE_NAME) .
+IMG_NAME = ${IMAGE_LABEL}
+CREATE_IMAGE = docker build -t $(IMG_NAME) .
 MOUNT_VOL =  -v /tmp/.X11-unix:/tmp/.X11-unix
-# DISPLAY_NAME = -e DISPLAY=$$HOSTNAME:0
 DISPLAY_WIRELESS = -e DISPLAY=$(shell ipconfig getifaddr en0):0
 DISPLAY_WIRED = -e DISPLAY=$(shell ipconfig getifaddr en1):0
 RUN_FLAGS = -it --rm
+INFO_SCRIPT=./.get_info.sh
+NET_IS_WIRELESS = $(shell ipconfig getifaddr en0 | wc -l | tr -d ' ')
+NET_IS_WIRED = $(shell ipconfig getifaddr en1 | wc -l | tr -d ' ')
+IMG_EXISTS = $(shell $(INFO_SCRIPT) | grep "Image exists: " | )
+
+print_info:
+	@echo "Getting info!"
+	@echo $(IMG_EXISTS)
 
 run_preconf:
 	@echo "Running preconf"
@@ -16,13 +25,13 @@ run_wired:
 	make run_preconf
 	@echo "Running wired"
 	open -a Xquartz
-	docker run $(RUN_FLAGS) $(DISPLAY_WIRED) $(MOUNT_VOL) $(IMAGE_NAME)
+	docker run $(RUN_FLAGS) $(DISPLAY_WIRED) $(MOUNT_VOL) $(IMG_NAME)
 
 run_wireless:
 	make run_preconf
 	@echo Running SO_LONG Game
 	open -a Xquartz
-	docker run $(RUN_FLAGS) $(DISPLAY_WIRELESS) $(MOUNT_VOL) $(IMAGE_NAME)
+	docker run $(RUN_FLAGS) $(DISPLAY_WIRELESS) $(MOUNT_VOL) $(IMG_NAME)
 
 configure:
 	@echo "Starting configuration..."
@@ -32,9 +41,9 @@ configure:
 
 uninstall:
 	@echo "Removing containers..."
-	docker ps -a --filter "ancestor=so_long_gui" -q | xargs docker rm
+	docker ps -a --filter "ancestor=$(IMG_NAME)" -q | xargs docker rm
 	@echo "Removing the image..."
-	docker rmi $(IMAGE_NAME)
+	docker rmi $(IMG_NAME)
 
 reinstall:
 	@echo "Reinstalling the app"
@@ -43,4 +52,3 @@ reinstall:
 	@echo "Configuring the image"
 	make configure
 	@echo "Running"
-	make run
