--- a/pipex/libft/Makefile
+++ b/pipex/libft/Makefile
@@ -7,7 +7,10 @@ src_libft/ft_strnstr.c src_libft/ft_strrchr.c src_libft/ft_strtrim.c src_libft/f
 SRC_GNL = src_gnl/get_next_line.c
 INC_GNL = -I inc_gnl/ 
 
-SRC = $(SRC_LIBFT) $(SRC_GNL)
+SRC_FT_PRINTF = src_ft_printf/ft_printf.c src_ft_printf/ft_printf_con.c
+INC_FT_PRINTF = -I inc_ft_printf/
+
+SRC =  $(SRC_FT_PRINTF) $(SRC_LIBFT) $(SRC_GNL)
 
 BONUS	= src_libft/ft_lstnew.c src_libft/ft_lstadd_front.c src_libft/ft_lstsize.c src_libft/ft_lstlast.c \
 		  src_libft/ft_lstadd_back.c src_libft/ft_lstdelone.c src_libft/ft_lstclear.c src_libft/ft_lstiter.c src_libft/ft_lstmap.c
@@ -20,7 +23,7 @@ CFLAGS = -Wall -Wextra -Werror
 RM = rm -rf
 
 .c.o:
-	$(CC) $(CFLAGS) -c $< -o $@ $(INC_LIBFT) $(INC_GNL)
+	$(CC) $(CFLAGS) -c $< -o $@ $(INC_FT_PRINTF) $(INC_LIBFT) $(INC_GNL)
 
 $(NAME): $(OBJ)
 	ar rc $(NAME) $(OBJ)
